--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ p{
     color: #606060;
 }
 
-.extra-div h2{
+.extra-div h2 .Servicediv h2{
     font-size: 00.9rem;
     margin: 20px 0 15px 0;
     font-weight: bold;
@@ -40,7 +40,7 @@ p{
     bottom: 0%;
     left: 0;
     right: 0;
-    background: linear-gradient(to right, #c5c475 0%, #f8ec8f 0%, #ebf7c0 100%);
+    background: linear-gradient(to right, #d8d88eda 0%, #b3b367 0%, #fdf5af 100%);
     opacity: .4;
     z-index: -1;
 }
@@ -52,7 +52,7 @@ p{
     bottom: 0%;
     left: 0;
     right: 0;
-    background: linear-gradient(to right, #c5c475 0%, #f8ec8f 0%, #ebf7c0 100%);
+    background: linear-gradient(to right, #eee714 0%, #f8e21e 0%, #ffff31 100%);
     opacity: .4;
     z-index: -1;
 }
@@ -116,4 +116,75 @@ p{
     padding: 50px!important;
     border-radius: 3px;
     transition: 0.3s;
+}
+.extra-div:hover{
+    box-shadow: 0 0 20px 0 rgba(0,0,0,0.3);
+    transform: translateY(-20px);
+}
+.serviceffers{
+    background: #f7f7f9;
+    padding: 50px 0;
+    margin-bottom: 50px;
+}
+
+.headings{
+    margin-bottom: 50px;
+}
+
+.headings h1{
+    font-size: 1.5rem;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.names h1{
+    color: #2e2e2e;
+    font-size: 0.9rem;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+.Servicediv h2{
+    font-size: 0.9rem;
+    margin: 20px 0 15px 0;
+    font-weight: bold;
+    line-height: 1.1;
+    word-spacing: 4px;
+}
+
+.service-icons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+i{
+    color: #78d4f8;
+}
+.progress{
+    height: 0.6rem!important;
+    margin-bottom: 25px!important;
+    background: #606060;
+}
+.containerproject{
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    align-items: center;
+
+}
+.project-work{
+    margin: 100px 0;
+
+}
+.project-work h1{
+    font-size: 2rem;
+    text-align: center;
+    
+    
+}
+.pricing{
+    width: 100%;
+    height: 100vh;
+    padding: 50px;
+    position: relative;
 }
